cmake_minimum_required(VERSION 2.8)
include_directories(${CMAKE_CURRENT_LIST_DIR})
# include_directories(/home/abakken/dev/curl/include)
# include_directories(/home/abakken/curltest/include)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32")
add_executable(curlcrash3 main.c)
# target_link_libraries(curlcrash /home/abakken/curltest/lib/libcurl.so)
include_directories(/usr/local/i686-netflix-linux-gnu-4.3/netflix/include)
target_link_libraries(curlcrash3 -L/usr/local/i686-netflix-linux-gnu-4.3/netflix/lib/ -Wl,-rpath=/usr/local/i686-netflix-linux-gnu-4.3/netflix/lib/)
target_link_libraries(curlcrash3 curl)
