cmake_minimum_required(VERSION 2.8)
include_directories(${CMAKE_CURRENT_LIST_DIR})
# set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
add_executable(curltest main.c)
# if (NOT PREFIX)
#     set(PREFIX /usr/local/i686-netflix-linux-gnu-4.3/netflix)
# endif ()

set(STUFF /Users/abakken/local)
include_directories(${STUFF}/include)
target_link_libraries(curltest -L${STUFF}/lib/) # -Wl,-rpath=${STUFF}/lib/)
target_link_libraries(curltest curl)
